# el_std_py

./: .gitignore  README.md  build_push.bash  flake.nix  pyproject.toml  release_notes.md  requirements.txt  shell.nix
docs/: bindantic.md
src/el/: async_tools.py  base.py  callback_manager.py  errors.py  file_manager.py  history_manager.py  numbers.py  path_utils.py  terminal.py  timers.py
src/el/assets/: _manager.py
src/el/bindantic/: README.md  __init__.py  _base_struct.py  _config.py  _deps.py  _field_config.py  _fields.py  _struct_construction.py
src/el/ctk_utils/: __init__.py  _colors.py  _deps.py  _dynamic_config.py  _scaling.py  _tooltip.py  types.py
src/el/datastore/: __init__.py  _deps.py  _file.py  _savable.py  _specialized.py  versioning.py
src/el/mpl_utils/: __init__.py  _deps.py  _dragging_manager.py
src/el/observable/: .generate_composed.py  __init__.py  _composed.py  _composed_generated.py  _composed_out.py  _observable.py  filters.py
src/el/tkml/: adapters.py  grid.py  tk_element.py
src/el/widgets/: _deps.py  keyboard.py  listbox.py  spinbox.py  toolbar_button.py  tooltip.py  value_box.py
src/el/widgets/ctkex/: __init__.py  _button_ex.py  _checkbox_ex.py  _combo_box_ex.py  _entry_ex.py  _frame_ex.py  _scrollable_frame_ex.py  _scrollbar_ex.py  _segmented_button_ex.py  _switch_ex.py  _textbox_ex.py
tests/: mtest_datastore.py  mtest_listbox.py  mtest_timers.py  test_assets.py  test_bindantic.py  test_datastore.py  test_file_manager.py  test_observable.py  test_terminal.py  test_tkml.py
